Configuration for versions of Java starting 17